[package]
name = "hub_scrapper"
version = "0.1.0"
edition = "2021"
authors = ["Davi Feliciano <dfeliciano37@gmail.com>"]
description = "Web Crawler to export all the exercise's solutions from https://hub.driven.com.br"
readme = "README.md"
repository = "https://github.com/davifeliciano/hub_scrapper"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
copypasta = "0.8.2"
html2md = "0.2.14"
rpassword = "7.2.0"
thirtyfour = "0.31.0"
tokio = "1.32.0"
